# Neural_Network

./: .gitignore  CMakeLists.txt  Fully_Connected_Layer.cpp  Fully_Connected_Layer.h  MNIST_Loader.cpp  MNIST_Loader.h  MNIST_dataFile.txt  Matrix.cpp  Matrix.h  MatrixF.cpp  MatrixF.h  Neural Network.aps  Neural_Network.cpp  Neural_Network.filters  Neural_Network.h  Neural_Network.sln  Neural_Network.vcxproj  Pipeline.h  README.md  Tensor.cpp  Tensor.h  compiler_optimizations.h  debug.h  kernel_utils.cpp  main.cpp  network_parameters.h  network_utils.cpp  simd_utils.cpp  simd_utils.h
Debug/: Neural_Network.exe.recipe  Neural_Network.ilk  Neural_Network.vcxproj.FileListAbsolute.txt  fully_connected_layer.obj.enc  main.obj.enc  matrixf.obj.enc  mnist_loader.new.obj.enc  multi_headed_attention_layer.new.obj.enc  softmax_layer.new.obj.enc  vc142.idb
Debug/Neural_Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mini_GPT.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Layers/: Conv.h  Dense.h  Dropout.h  Flatten.h  Layer.h  Norm.h  ReLu.h  Sigmoid.h  Softmax.h
x64/Debug/: Mini_GPT.vcxproj.FileListAbsolute.txt  Neural_Network.exe.recipe  Neural_Network.ilk  Neural_Network.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/Neural_Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Neural_Network.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Neural_Network/: Neural_Network.exe.recipe  Neural_Network.ilk  Neural_Network.vcxproj.FileListAbsolute.txt
(+7 files in other folders)
